Fixed overlapping canvas

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ img{
     
     --LOADING-BAR-SIZE: 10px;
     --LOADING-BAR-PROGRESS-NUM: 0%;
+    --CANVAS-GAP: -2px;
 }
 
 /* ||   STYLES   || */
@@ -44,13 +45,15 @@ img{
 }
 
 #textCanvas{
+    position: absolute;
     width: 300px;
     height: 250px;
     border: 3px solid black;
-    position: absolute;
     background-color: var(--TEXT-CANVAS-COLOR);
-    margin-top: 1.3%;
-    left: 5.6%;
+    /* Align top edge with mainCanvas top */
+    top: calc(50% - 250px); /* 500px / 2 */
+    /* Place to the left of mainCanvas with a gap */
+    left: calc(50% - 250px - var(--CANVAS-GAP) - 300px); /* main half-width (250) + gap + text width (300) */
 }
 
 .loadingScreen{
